// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/bitbucket-server/index endpoint with no path addAssignees() does not throw 1`] = `undefined`;

exports[`platform/bitbucket-server/index endpoint with no path addReviewers does not throw 1`] = `undefined`;

exports[`platform/bitbucket-server/index endpoint with no path addReviewers sends the reviewer name as a reviewer 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5/merge",
  },
  Object {
    "body": "{\\"title\\":\\"title\\",\\"version\\":1,\\"reviewers\\":[{\\"user\\":{\\"name\\":\\"userName2\\"}},{\\"user\\":{\\"name\\":\\"name\\"}}]}",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "98",
      "content-type": "application/json",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "PUT",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5/merge",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path addReviewers throws 1`] = `"Response code 405 (Method Not Allowed)"`;

exports[`platform/bitbucket-server/index endpoint with no path addReviewers throws on invalid reviewers 1`] = `"Response code 409 (Conflict)"`;

exports[`platform/bitbucket-server/index endpoint with no path deleteLAbel() does not throw 1`] = `undefined`;

exports[`platform/bitbucket-server/index endpoint with no path findPr() has pr 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "createdAt": 1547853840016,
  "number": 5,
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getBranchPr() has pr 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getPr() canRebase 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getPr() canRebase 2`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getPr() canRebase 3`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getPr() gets a PR 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getPr() gets a closed PR 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "hasReviewers": false,
  "number": undefined,
  "reviewers": Array [],
  "sourceBranch": undefined,
  "state": "merged",
  "targetBranch": undefined,
  "title": undefined,
  "version": 0,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path getPrList() has pr 1`] = `
Array [
  Object {
    "body": "* Line 1
* Line 2",
    "createdAt": 1547853840016,
    "number": 5,
    "sourceBranch": "userName1/pullRequest5",
    "state": "open",
    "targetBranch": "master",
    "title": "title",
    "version": 1,
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path getRepos() returns repos 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/repos?permission=REPO_WRITE&state=AVAILABLE&limit=100",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path initPlatform() should init 1`] = `
Object {
  "endpoint": "https://stash.renovatebot.com/",
}
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() generates URL if API does not contain clone links 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() generates URL if API does not contain clone links 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() throws REPOSITORY_EMPTY if there is no default branch 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() uses http url from API with injected auth if http url in API response 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() uses http url from API with injected auth if http url in API response 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() uses ssh url from API if http not in API response 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() uses ssh url from API if http not in API response 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() works 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with no path initRepo() works 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path massageMarkdown() returns diff files 1`] = `"**foo**bartext"`;

exports[`platform/bitbucket-server/index endpoint with no path massageMarkdown() sanitizes HTML comments in the body 1`] = `
"---

- [ ] If you want to rebase/retry this PR, check this box
- [ ] <a href=\\"/some/link\\">Update renovate/renovate to 16.1.2</a>

---

Empty comment.

Followed by some information.
"
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return false if ff strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return false if no-ff strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return false if rebase-no-ff strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return false if squash strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return true if ff-only strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return true if rebase-ff-only strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() return true if squash-ff-only strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() returns false on missing defaultStrategy 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path repoForceRebase() returns false on missing mergeConfig 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with no path updatePr() throws 1`] = `"Response code 405 (Method Not Allowed)"`;

exports[`platform/bitbucket-server/index endpoint with path addAssignees() does not throw 1`] = `undefined`;

exports[`platform/bitbucket-server/index endpoint with path addReviewers does not throw 1`] = `undefined`;

exports[`platform/bitbucket-server/index endpoint with path addReviewers sends the reviewer name as a reviewer 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5/merge",
  },
  Object {
    "body": "{\\"title\\":\\"title\\",\\"version\\":1,\\"reviewers\\":[{\\"user\\":{\\"name\\":\\"userName2\\"}},{\\"user\\":{\\"name\\":\\"name\\"}}]}",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "98",
      "content-type": "application/json",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "PUT",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/pull-requests/5/merge",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path addReviewers throws 1`] = `"Response code 405 (Method Not Allowed)"`;

exports[`platform/bitbucket-server/index endpoint with path addReviewers throws on invalid reviewers 1`] = `"Response code 409 (Conflict)"`;

exports[`platform/bitbucket-server/index endpoint with path deleteLAbel() does not throw 1`] = `undefined`;

exports[`platform/bitbucket-server/index endpoint with path findPr() has pr 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "createdAt": 1547853840016,
  "number": 5,
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getBranchPr() has pr 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getPr() canRebase 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getPr() canRebase 2`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getPr() canRebase 3`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getPr() gets a PR 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "canMerge": false,
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "isConflicted": false,
  "number": 5,
  "reviewers": Array [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getPr() gets a closed PR 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "hasReviewers": false,
  "number": undefined,
  "reviewers": Array [],
  "sourceBranch": undefined,
  "state": "merged",
  "targetBranch": undefined,
  "title": undefined,
  "version": 0,
}
`;

exports[`platform/bitbucket-server/index endpoint with path getPrList() has pr 1`] = `
Array [
  Object {
    "body": "* Line 1
* Line 2",
    "createdAt": 1547853840016,
    "number": 5,
    "sourceBranch": "userName1/pullRequest5",
    "state": "open",
    "targetBranch": "master",
    "title": "title",
    "version": 1,
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path getRepos() returns repos 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/repos?permission=REPO_WRITE&state=AVAILABLE&limit=100",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path initPlatform() should init 1`] = `
Object {
  "endpoint": "https://stash.renovatebot.com/",
}
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() generates URL if API does not contain clone links 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() generates URL if API does not contain clone links 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() throws REPOSITORY_EMPTY if there is no default branch 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() uses http url from API with injected auth if http url in API response 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() uses http url from API with injected auth if http url in API response 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() uses ssh url from API if http not in API response 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() uses ssh url from API if http not in API response 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() works 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket-server/index endpoint with path initRepo() works 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/SOME/repos/repo/branches/default",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path massageMarkdown() returns diff files 1`] = `"**foo**bartext"`;

exports[`platform/bitbucket-server/index endpoint with path massageMarkdown() sanitizes HTML comments in the body 1`] = `
"---

- [ ] If you want to rebase/retry this PR, check this box
- [ ] <a href=\\"/some/link\\">Update renovate/renovate to 16.1.2</a>

---

Empty comment.

Followed by some information.
"
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return false if ff strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return false if no-ff strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return false if rebase-no-ff strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return false if squash strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return true if ff-only strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return true if rebase-ff-only strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() return true if squash-ff-only strategy is enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() returns false on missing defaultStrategy 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path repoForceRebase() returns false on missing mergeConfig 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "stash.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
      "x-atlassian-token": "no-check",
    },
    "method": "GET",
    "url": "https://stash.renovatebot.com/vcs/rest/api/1.0/projects/undefined/repos/undefined/settings/pull-requests",
  },
]
`;

exports[`platform/bitbucket-server/index endpoint with path updatePr() throws 1`] = `"Response code 405 (Method Not Allowed)"`;
